# fidorium

./: ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: config.rs  diagnostics.rs  error.rs  lib.rs  main.rs
src/ctap2/: attestation.rs  authenticator_data.rs  get_assertion.rs  get_info.rs  make_credential.rs  mod.rs  types.rs
src/ctaphid/: channel.rs  dispatch.rs  mod.rs  packet.rs  types.rs
src/hid/: device.rs  mod.rs  report.rs  transport.rs
src/store/: credential.rs  disk.rs  index.rs  mod.rs
src/tpm/: context.rs  counter.rs  keys.rs  mod.rs  seal.rs
src/up/: mod.rs  pinentry.rs  prompt.rs
tests/: ctap2_get_info.rs  ctaphid_init.rs  store_roundtrip.rs  test_init.py  tpm_smoke.rs
